# diabetes-risk-mlops

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  config_local.yaml  databricks_job.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
data/: diabetes.tab.txt
infra/cli/: 01_acr.sh  02_aca.sh  03_apim.sh  04_keyvault.sh  setup-oidc.sh
infra/terraform/: aca.tf  acr.tf  apim.tf  keyvault.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
notebooks/: risk_score_model_demo2026.ipynb
src/api/: main.py  schemas.py  scorer.py
src/api/middleware/: auth.py
src/api/routers/: predict.py
src/risk_score/: cli.py  data.py  mlflow_utils.py  score.py  train.py
tasks/: config_utils.py  ingest.py  io_utils.py  register.py  train.py
tests/: test_api.py  test_data.py  test_data_loading.py  test_mlflow_utils.py  test_score.py  test_scorer.py  test_task_config.py  test_tasks.py  test_train.py
