[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-score"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn",
    "scipy",
    "numpy",
    "pandas",
    "requests",
    "pyyaml",
    "mlflow>=2.0",
]

[project.scripts]
risk-score = "risk_score.cli:main"

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
